--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         activity_compose_version = '1.7.1'
         hilt_version="2.45"
         nav_compose_version = "1.0.0"
+        room_version = '2.5.1'
     }
 
     repositories {
